[package]
name = "rce-engine"
version = "1.2.5"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = "HTTP API for running untrusted code inside isolated Docker containers."
homepage = "https://github.com/ToolKitHub/rce-engine?tab=readme-ov-file#readme"
repository = "https://github.com/ToolKitHub/rce-engine"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
http = "1.3.1"
httparse = "1.10.1"
iowrap = "0.2.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
