[package]
name = "rce-engine"
version = "1.2.71"
authors = ["ToolKitHub"]
description = "A secure service for running untrusted code inside isolated Docker containers via a simple HTTP API"
homepage = "https://github.com/ToolKitHub/rce-engine?tab=readme-ov-file#readme"
repository = "https://github.com/ToolKitHub/rce-engine"
edition = "2024"
license = "MIT"

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
http = "1.3.1"
httparse = "1.10.1"
iowrap = "0.2.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# We use `opt-level = "s"` as it significantly reduces binary size.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

