[package]
name = "rce-engine"
version = "1.2.72"
edition = "2024"
authors = ["ToolKitHub <xosnrdev@gmail.com>"]
description = "A secure service for running untrusted code inside isolated Docker containers via a simple HTTP API"
repository = "https://github.com/ToolKitHub/rce-engine"
license = "MIT"

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
http = "1.4.0"
httparse = "1.10.1"
iowrap = "0.2.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
# See default profiles: https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
[profile.release]
codegen-units = 1          # reduces binary size by ~2%
lto = true                 # reduces binary size by ~14%
panic = "abort"            # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed" # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"          # See split-debuginfo - allows us to drop the size by ~65%
incremental = true         # Improves re-compile times

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
